--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,39 @@
-.App {
-  text-align: center;
+html {
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  /* background-image: linear-gradient(to bottom, rgba(255, 255, 255, .8), rgba(255, 255, 255, .5) 120px, rgba(255, 255, 255, .5)), url('/public/image/tris.svg'); */
+  background: rgb(245,245,245);
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
+
+.App{
+  width: 100%;
+  height: 100%;
+}
+
+:root{
+  --bkg-color:#e3e4f0;
+  --primary-color:#015ea4;
+  --aux-color:#8e2525;
+  --alert-color:#ffe76f;
+  --text-color:#272b37;
+  /* --bkg-color:#144bb0;
+  --primary-color:#f05d06;
+  --aux-color:#eae3cb;
+  --text-color:#000; */
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +66,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
